# SNES_Emulator

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  SNES_Emulator.cbp  SNES_Emulator.depend  SNES_Emulator.layout  compareLog.py
Sources/: AddressingMode.cc  AddressingMode.h  Bus.cc  Bus.h  Cartridge.cc  Cartridge.h  CartridgeHeader.cc  CartridgeHeader.h  Common.h  ConsoleDebugger.cc  ConsoleDebugger.h  Instruction.cc  Instruction.h  MemoryInterface.cc  MemoryInterface.h  SNES_APU.cc  SNES_APU.h  Stage.cc  Stage.h  W65816.cc  W65816.h  main.cc
Sources/APU/: SNES_APU.cc  SNES_APU.h  SPC700.cc  SPC700.h  SPC_AddressingModes.cc  SPC_Instructions.cc
Sources/CPU/: ASMDecode.cc  AddressingMode.cc  AddressingMode.h  CPU_AddressingModesDefinitions.cc  CPU_Debugger.cc  CPU_Debugger.h  CPU_Instructions.cc  CPU_Operations.cc  CPU_Signals.cc  Instruction.cc  Instruction.h  OpcodeDefinitions.cc  Stage.cc  Stage.h  Types.h  W65816.h  W65816_Core.cc  newDecode.cc
Sources/PPU/: DmaHandler.cc  DmaHandler.h  SNES_PPU.cc  SNES_PPU.h
Sources/Tests/: Test_CPU.cc
Tests/: Test_CPU.cc
